// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EndDate /> render() should render 1`] = `
<div>
  <ConnectFunction
    fullWidth={true}
    noPadding={true}
    placement="bottom"
    renderButton={[MockFunction]}
    startDayId={123}
    value="tempEndDay"
  >
    <Component />
  </ConnectFunction>
  <Formsy(DataField)
    currentValue="tempEndDay"
    innerRef={[Function]}
    name="node.customData.end.tempDay"
    required={false}
    validationError=""
    validationErrors={Object {}}
    validations={null}
  />
</div>
`;

exports[`<EndDate /> renderButton() should renderButton 1`] = `
<div>
  <WithStyles(Connect(WithSimplifyResaga(Connect(WithSimplifyResaga(Connect(WithSimplifyResaga(DayIds)))))))
    id={1}
    showDayIndex={true}
  >
    <Component />
  </WithStyles(Connect(WithSimplifyResaga(Connect(WithSimplifyResaga(Connect(WithSimplifyResaga(DayIds)))))))>
</div>
`;

exports[`<EndDate /> renderButton() should return batchCreate 1`] = `
<div>
  <WithStyles(GridContainer)
    direction="column"
    spacing={0}
  >
    <WithStyles(GridItem)>
      <FilledTextField
        InputProps={Object {}}
        autoComplete="off"
        fullWidth={true}
        label="End date"
        placeholder="Enter end date"
        readonly={true}
        value="renderUnanchoredDays"
      />
    </WithStyles(GridItem)>
  </WithStyles(GridContainer)>
</div>
`;

exports[`<EndDate /> renderDayDate() should renderDayDate 1`] = `
<div>
  <WithStyles(GridContainer)
    direction="column"
    spacing={0}
  >
    <WithStyles(GridItem)>
      <FilledTextField
        InputProps={Object {}}
        autoComplete="off"
        fullWidth={true}
        label="End date"
        placeholder="Enter end date"
        readonly={true}
      />
    </WithStyles(GridItem)>
  </WithStyles(GridContainer)>
</div>
`;

exports[`<EndDate /> renderMenu() should renderMenu 1`] = `
<div>
  <div
    className=""
  >
    <WithStyles(GridContainer)
      direction="column"
      spacing={0}
    />
  </div>
</div>
`;

exports[`<EndDate /> renderOption() should renderOption 1`] = `
<div>
  <WithStyles(GridItem)>
    <WithStyles(JButton)
      block={true}
      noBorderRadius={true}
      onClick={[Function]}
      textAlign="left"
    >
      <WithStyles(GridContainer)
        alignItems="center"
      >
        <WithStyles(GridItem)>
          <input
            checked={false}
            name="startDates"
            type="radio"
            value="email"
          />
        </WithStyles(GridItem)>
        renderOptionContent
      </WithStyles(GridContainer)>
    </WithStyles(JButton)>
  </WithStyles(GridItem)>
</div>
`;

exports[`<EndDate /> renderOptionContent() should renderOptionContent index !0 1`] = `
<div>
  <WithStyles(GridItem)
    xs={true}
  >
    <WithStyles(JTextClass)
      dark={true}
    >
      <WithStyles(Connect(WithSimplifyResaga(Connect(WithSimplifyResaga(Connect(WithSimplifyResaga(DayIds)))))))
        offset="P10D"
        showDayIndex={true}
      />
    </WithStyles(JTextClass)>
  </WithStyles(GridItem)>
  <WithStyles(GridItem)>
    <WithStyles(JTextClass)
      gray={true}
    >
      10
       d
    </WithStyles(JTextClass)>
  </WithStyles(GridItem)>
</div>
`;

exports[`<EndDate /> renderOptionContent() should renderOptionContent index 0 1`] = `
<div>
  <WithStyles(GridItem)
    xs={true}
  >
    <WithStyles(JTextClass)
      dark={true}
    >
      <WithStyles(Connect(WithSimplifyResaga(Connect(WithSimplifyResaga(Connect(WithSimplifyResaga(DayIds)))))))
        offset="P0D"
        showDayIndex={true}
      />
    </WithStyles(JTextClass)>
  </WithStyles(GridItem)>
</div>
`;

exports[`<EndDate /> renderOptionContent() should return null 1`] = `
<div>
  <WithStyles(GridItem)>
    <WithStyles(JTextClass)
      gray={true}
    >
      undefined day later
    </WithStyles(JTextClass)>
  </WithStyles(GridItem)>
</div>
`;
